--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    :root {
+      --color-background: 7 7 7;
+      --color-h1: 231 109 87;
+      /* ... */
+    }
+  }
+  
